Remove outdated location details and update schedule

--- a/index.html
+++ b/index.html
@@ -125,17 +125,14 @@
             <article class="card"><h3>Drop-in class</h3><p class="price">$20</p><p>Single class access.</p><a data-link="reserve" class="btn btn-primary" href="#">Reserve drop-in</a></article>
             <article class="card"><h3>Monthly package</h3><p class="price">$75</p><p>4 classes/month for consistency.</p><a data-link="reserve" class="btn btn-primary" href="#">Reserve monthly</a></article>
             <article class="panel"><h3>Pay options</h3><p><strong>Zelle:</strong> <span data-fill="zelle"></span></p><p><strong>Venmo:</strong> <a data-link="venmo" href="#"><span data-fill="venmo"></span></a></p></article>
-          </div>
-          <article class="panel"><h2>The Woodlands, TX</h2><p>Primary location details here.</p></article>
-          <article class="panel"><h2>Creekside</h2><p>Cool Spot – Creekside (placeholder, edit as needed).</p></article>
         </div>
       </section>
 
       <section class="section" id="schedule-location">
         <div class="container three-col">
-          <article class="panel"><h2>Schedule</h2><p>Wednesday — 7:30 PM</p><p class="small">Edit this block as schedule changes.</p></article>
-          <article class="panel"><h2>The Woodlands</h2><p>Coolspot class location.</p></article>
-          <article class="panel"><h2>Google Maps</h2><p><a href="https://maps.app.goo.gl/LYzHPzKGC7KanRG67" target="_blank" rel="noopener noreferrer">Open Coolspot map location</a></p></article>
+          <article class="panel"><h2>Schedule</h2><p>Wednesday — 7:30 PM</p><p class="small">Subject to change.</p></article>
+          <article class="panel"><h2>The Woodlands</h2><p><a href="https://maps.app.goo.gl/LYzHPzKGC7KanRG67" target="_blank" rel="noopener noreferrer">The Cool spot.</a></p></article>
+          <article class="panel"><h2>Google Maps</h2>
         </div>
       </section>
 
