Update schedule page with location details

--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <header class="site-header"><div class="container nav-wrap"><a href="/" class="brand"><img src="../Logo.jpeg" alt="Amanda Dance Project logo" class="brand-logo" /><span>AMANDA DANCE PROJECT</span></a><nav class="nav-links"><a data-link="reserve" class="btn btn-primary" href="#">Reserve Spot</a><a href="pricing.html">Pricing</a><a href="schedule.html">Schedule</a><a data-link="instagram" href="#">Instagram</a></nav></div></header>
-<main class="section"><div class="container"><h1>Schedule + Location</h1><div class="three-col"><article class="panel"><h2>Class time</h2><p>Wednesday — 7:30 PM</p></article><article class="panel"><h2>Google Maps</h2><p><a href="https://maps.app.goo.gl/LYzHPzKGC7KanRG67" target="_blank" rel="noopener noreferrer">Open Coolspot map location</a></p></article></div><p><a data-link="reserve" class="btn btn-primary" href="#">Reserve now</a></p></div></main>
+<main class="section"><div class="container"><h1>Schedule + Location</h1><div class="three-col"><article class="panel"><h2>Class time</h2><p>Wednesday — 7:30 PM</p></article><article class="panel"><h2>The Woodlands</h2><p><a href="https://maps.app.goo.gl/LYzHPzKGC7KanRG67" target="_blank" rel="noopener noreferrer">Cool Spot</a></p></article></div><p><a data-link="reserve" class="btn btn-primary" href="#">Reserve now</a></p></div></main>
 <footer><div class="container"><p><a href="/">Back to home</a></p></div></footer>
 <script src="../assets/js/main.js" defer></script>
 </body>
