--- a/index.html
+++ b/index.html
@@ -131,8 +131,7 @@
       <section class="section" id="schedule-location">
         <div class="container three-col">
           <article class="panel"><h2>Schedule</h2><p>Wednesday — 7:30 PM</p><p class="small">Subject to change.</p></article>
-          <article class="panel"><h2>The Woodlands</h2><p><a href="https://maps.app.goo.gl/LYzHPzKGC7KanRG67" target="_blank" rel="noopener noreferrer">The Cool spot.</a></p></article>
-          <article class="panel"><h2>Google Maps</h2>
+          <article class="panel"><h2>Location</h2><p><a href="https://maps.app.goo.gl/LYzHPzKGC7KanRG67" target="_blank" rel="noopener noreferrer">Cool Spot - The Woodlands</a></p></article>
         </div>
       </section>
 
